# hikuweb

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  plan.md  progress.txt  pyproject.toml  pytest.ini  tasks.jsonl  todo.md
src/hikuweb/: __init__.py  config.py  main.py
src/hikuweb/api/: __init__.py  dependencies.py  routes.py
src/hikuweb/db/: __init__.py  api_keys.py  connection.py  extraction_logs.py
src/hikuweb/services/: __init__.py  api_key_service.py  extraction.py  rate_limiter.py  robots.py  schema_translator.py
tests/: conftest.py  test_api_auth.py  test_api_extract.py  test_api_health.py  test_api_key_service.py  test_api_usage.py  test_config.py  test_db_api_keys.py  test_db_connection.py  test_db_extraction_logs.py  test_integration.py  test_rate_limiter.py  test_robots.py  test_schema_translator.py
